--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/express": "^4.17.13",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^18.7.13",
+    "typescript": "^4.9.4",
     "nodemon": "^2.0.19"
   }
 }
