--- a/package.json
+++ b/package.json
@@ -2,25 +2,27 @@
   "name": "bicycle-server",
   "version": "1.0.0",
   "description": "",
-  "main": "./dist/main.js",
+  "main": "main.ts",
   "scripts": {
-    "dev": "nodemon ./dist/main.js"
+    "dev": "nodemon main.ts",
+    "start": "ts-node main.ts"
   },
   "keywords": [],
   "author": "mahmoudAcm",
   "license": "ISC",
   "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.1",
-    "mongoose": "^6.5.3"
-  },
-  "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^18.7.13",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.1",
+    "mongoose": "^6.5.3",
     "nodemon": "^2.0.19",
+    "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.1.2",
+    "tslib": "^2.5.0",
     "typescript": "^4.9.4"
   }
 }
